--- a/src/Components/ImageCard/ImageCard.module.css
+++ b/src/Components/ImageCard/ImageCard.module.css
@@ -3,7 +3,15 @@
     margin: 0 1.5rem 1.5rem 0;
     display: inline-block;
     padding: 15px 5px;
-    transition: all 1s ease-in-out;
+    transition: all 1s cubic-bezier(0.42, 0, 0.58, 1.0);
+    cursor: pointer;
+}
+
+
+.card:hover {
+    -webkit-transform: scale(1.05);
+    -ms-transform: scale(1.05);
+    transform: scale(1.05);
 }
 
 .img {
