--- a/src/Components/ImageCard/ImageCard.module.css
+++ b/src/Components/ImageCard/ImageCard.module.css
@@ -46,8 +46,8 @@
       padding-left: 1em;
       padding-right: 1em;
       width: 100%;
-      top: 50%;
-      left: 50%;
+      top: 40px;
+      left: 85%;
       opacity: 0;
       -webkit-transform: translate(-50%, -50%);
       -moz-transform: translate(-50%, -50%);
@@ -57,9 +57,32 @@
       transition: all 0.3s ease-in-out 0s;
   }
 
+
+  .cardTitle {
+      position: absolute;
+      text-align: left;
+      padding-left: 1em;
+      padding-right: 1em;
+      width: 100%;
+      bottom: 20px;
+      left: 15%;
+      opacity: 0;
+      transform: translateX(-10%);
+      -webkit-transition: all 0.3s ease-in-out 0s;
+      -moz-transition: all 0.3s ease-in-out 0s;
+      transition: all 0.3s ease-in-out 0s;
+      color: wheat;
+      font-size: 18px;
+      font-weight: 500;
+  }
+
+
+
   .card:hover .cardDetails {
-      top: 40px;
-      left: 85%;
+      opacity: 1;
+  }
+
+  .card:hover .cardTitle {
       opacity: 1;
   }
 
@@ -84,7 +107,7 @@
   .cardDetails h3 {
       color: #fff;
       font-weight: 500;
-      letter-spacing: 0.15em;   
+      letter-spacing: 0.15em;
       margin-bottom: 0.5em;
       text-transform: uppercase;
   }
