--- a/src/Components/ImageCard/ImageCard.module.css
+++ b/src/Components/ImageCard/ImageCard.module.css
@@ -63,9 +63,9 @@
       text-align: left;
       padding-left: 1em;
       padding-right: 1em;
-      width: 100%;
+      width: 80%;
       bottom: 20px;
-      left: 15%;
+      left: 13%;
       opacity: 0;
       transform: translateX(-10%);
       -webkit-transition: all 0.3s ease-in-out 0s;
@@ -97,6 +97,7 @@
       border-radius: 24px;
       font-weight: 600;
       letter-spacing: 1px;
+      transition: all 0.3s ease-in-out;
   }
 
   .deleteBtn:hover {
