--- a/src/Components/ImageCard/ImageCard.module.css
+++ b/src/Components/ImageCard/ImageCard.module.css
@@ -40,14 +40,14 @@
       box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   }
 
-  .cardDetails {
+  .cardDelete {
       position: absolute;
       text-align: center;
       padding-left: 1em;
       padding-right: 1em;
       width: 100%;
-      top: 40px;
-      left: 85%;
+      top: 47px;
+      left: 82%;
       opacity: 0;
       -webkit-transform: translate(-50%, -50%);
       -moz-transform: translate(-50%, -50%);
@@ -61,11 +61,9 @@
   .cardTitle {
       position: absolute;
       text-align: left;
-      padding-left: 1em;
-      padding-right: 1em;
       width: 80%;
-      bottom: 20px;
-      left: 13%;
+      bottom: 19px;
+      left: 18%;
       opacity: 0;
       transform: translateX(-10%);
       -webkit-transition: all 0.3s ease-in-out 0s;
@@ -78,7 +76,7 @@
 
 
 
-  .card:hover .cardDetails {
+  .card:hover .cardDelete {
       opacity: 1;
   }
 
@@ -104,19 +102,7 @@
       background: #EB5757;
       color: #fff;
   }
-
-  .cardDetails h3 {
-      color: #fff;
-      font-weight: 500;
-      letter-spacing: 0.15em;
-      margin-bottom: 0.5em;
-      text-transform: uppercase;
-  }
-
-  .cardDetails p {
-      color: #fff;
-      font-size: 0.8em;
-  }
+ 
 
   .fadeIn-bottom {
       top: 80%;
